# Backend

./: .env  .flake8  .gitignore  Pipfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflow/: pythonpackage.yml
.github/workflows/: pythonpackage.yml
Tortoise/: admin_urls.py  celery.py  contact.py  discord_cdn_models.py  discord_handler.py  github_handler.py  hosts.py  models.py  oauth.py  settings.py  urls.py  views.py  views.py~  wsgi.py
admin_dashboard/: forms.py  models.py  urls.py  views.py
assets/css/: main.css  style.css
assets/sass/: style.scss
cert/: certificate.crt  private.key
core/: hosts.py  settings.py  wsgi.py
templates/: announcements.html  billboard.html  community.html  contact.html  credits.html  credits.html~  developers.html  event.html  events.html  index.html  members.html  members.html~  privacy.html  project.html  projects.html  rules.html  single-blog.html  verification.html  verification_handler.html
tortoise/: hosts.py  models.py  settings.py  urls.py  wsgi.py
tortoise_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tortoise_dash/: apps.py  urls.py  views.py
tortoise_web/: admin.py  apps.py  models.py  urls.py  views.py
userdata/: admin.py  admin.py~  apps.py  discord_handler.py  main.py  models.py  models.py~  serializers.py  serializers.py~  urls.py  urls.py~  views.py  views.py~
utils/: decorators.py  encryption.py  handlers.py  misc.py  mixins.py  oauth.py  operations.py  tools.py
websitedata/: admin.py  apps.py  models.py  urls.py  views.py
(+201 files in other folders)
